--- a/inst/doc/01_13_clustering.Rmd
+++ b/inst/doc/01_13_clustering.Rmd
@@ -1,44 +1,47 @@
 ---
+title: Clustering
+author: Jeff Leek
 output:
-  BiocStyle::html_document
+  rmarkdown::html_document:
+    toc: true
+  vignette: >  
+    %\VignetteIndexEntry{Clustering for genomics}
+    %\VignetteEngine{knitr::rmarkdown}
+    \usepackage[utf8]{inputenc}
 ---
 
-
-<!-- These options are set up specifically for Bioconductor flavored Markdown --> 
-
-
-<!-- rmarkdown v1 -->
-
-<!--
-%\VignetteIndexEntry{R Markdown Lecture}
-%\VignettePackage{BiocStyle}
-%\VignetteEngine{knitr::knitr}
--->
-
-```{r style, results = 'asis',include=FALSE}
-BiocStyle::markdown()
+```{r front, child="./../front.Rmd", echo=FALSE}
 ```
 
-```{r global_options,include=FALSE}
-## see ch. 10 Hooks of Xie's knitr book
-knit_hooks$set(setPch = function(before, options, envir) {
-  if(before) par(pch = 19)
+
+## Dependencies
+
+This document depends on the following packages:
+
+```{r load_hidden, echo=FALSE, results="hide", warning=FALSE}
+suppressPackageStartupMessages({
+  library(devtools)
+  library(Biobase)
+  library(dendextend)
 })
-opts_chunk$set(setPch = TRUE)
-library(RSkittleBrewer)
-# Make the colors pretty
-trop = RSkittleBrewer("tropical")
-palette(trop)
+```
+
+```{r load}
+  library(devtools)
+  library(Biobase)
+  library(dendextend)
+```
+
+To install these packages you can use the code (or if you are compiling the document, remove the `eval=FALSE` from the chunk.)
+
+```{r install_packages, eval=FALSE}
+install.packages(c("devtools","dendextend"))
+source("http://www.bioconductor.org/biocLite.R")
+biocLite(c("Biobase"))
 ```
 
 
-# Clustering
-
-Package: [genstats](https://github.com/jtleek/genstats)<br />
-Author: [Jeff Leek](www.jtleek.com) <br />
-Compilation date: `r Sys.Date()`
-
-### General principles
+## General principles
 
 * How do we define close?
 * How do we group things?
@@ -46,7 +49,7 @@ Compilation date: `r Sys.Date()`
 * How do we interpret the grouping? 
 
 
-### Load some data
+## Load some data
 
 We will use this expression set to look at how we use plots and tables to check for different characteristics
 
@@ -61,7 +64,7 @@ fdata = fData(bm)
 ls()
 ```
 
-### Calculate distances between samples
+## Calculate distances between samples
 
 * Most important step
   * Garbage in -> garbage out
@@ -81,14 +84,12 @@ edata = log2(edata + 1)
 dist1 = dist(t(edata))
 
 ## Look at distance matrix
-library(RSkittleBrewer)
-trop = RSkittleBrewer("tropical")
-colramp = colorRampPalette(c(trop[3],"white",trop[2]))(9)
+colramp = colorRampPalette(c(3,"white",2))(9)
 heatmap(as.matrix(dist1),col=colramp,Colv=NA,Rowv=NA)
 ```
 
 
-### Now cluster the samples
+## Now cluster the samples
 
 Here we use the distance we previously calculated to perform a hierarchical clustering and plot the dendrogram:
 ```{r}
@@ -105,22 +106,21 @@ plot(hclust1,hang=-1)
 We can also color the dendrogram either into a fixed number of groups
 
 ```{r}
-library(dendextend)
 dend = as.dendrogram(hclust1)
-dend = color_labels(hclust1,4,col=trop)
+dend = color_labels(hclust1,4,col=1:4)
 plot(dend)
 ```
 
 Or you can color them directly 
 
 ```{r}
-labels_colors(dend) = c(rep(trop[1],10),rep(trop[2],9))
+labels_colors(dend) = c(rep(1,10),rep(2,9))
 plot(dend)
 ```
 
 This can get very fancy and we won't cover all the options here but for further ideas check out the [dendextend package](http://htmlpreview.github.io/?https://github.com/talgalili/dendextend/blob/master/inst/ignored/Introduction%20to%20dendextend.html).
 
-### K-means clustering
+## K-means clustering
 
 Now we can perform k-means clustering. By default, the rows are clustered. You can either input the cluster means (often unknown) or the number of clusters (here I input 3 clusters)
 
@@ -155,19 +155,13 @@ table(kmeans1$cluster,kmeans2$cluster)
 ```
 
 
-### Dependencies
+## Session information
 
-These are the packages that this tutorial depends on:
-
-* [BiocStyle](http://www.bioconductor.org/packages/release/bioc/html/BiocStyle.html)
-* [knitr](https://cran.r-project.org/package=knitr)
-* [RSkittleBrewer](https://github.com/alyssafrazee/RSkittleBrewer)
-* [Biobase](http://bioconductor.org/packages/release/bioc/html/Biobase.html)
-* [devtools](https://cran.r-project.org/package=devtools)
-* [dendextend](https://cran.r-project.org/package=dendextend)
-
-### Session information
+Here is the session information 
 
 ```{r session_info}
 devtools::session_info()
 ```
+
+It is also useful to compile the time the document was processed. This document was processed on: `r Sys.Date()`.
+
